--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sam Gordon WDD 230</title>
+    <meta name="discription" content="Sam Gordon WDD 230 assignment portal">
 </head>
+   
 <body>
-    Hello there
+    <header>
+        <h1>Sam Gordon</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>Lesson 2: <a href="#">Title</a></li>
+            <li>Lesson 3: Title</li>
+            <li>Lesson 4: Title</li>
+            <li>Lesson 5: Title</li>
+            <li>Lesson 6: Title</li>
+            <li>Lesson 7: Title</li>
+            <li>Lesson 8: Title</li>
+            <li>Lesson 9: Title</li>
+            <li>Lesson 10: Title</li>
+            <li>Lesson 11: Title</li>
+        </ul>
+    </nav>
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+    </main>
+    
+    
+    <footer>
+
+    </footer>
 </body>
 </html>
