--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             if (isFinite(lastVisit)) {
                 alert("This page has been changed!");
             }
-            }</script></span></p>
+            }</script></p>
     </footer>
     <script src="scripts/script.js"></script>
 </body>
