--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav >
         <h2>WDD 230: Assignment Portal</h2>
         <ul>
-            <li>Lesson 2: <a href="#">Title</a></li>
+            <li>Lesson 2: <a href="lesson2/design-principles.html">Lesson 2</a></li>
             <li>Lesson 3: <a href="#">Title</a></li>
             <li>Lesson 4: <a href="#">Title</a></li>
             <li>Lesson 5: <a href="#">Title</a></li>
