--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -34,14 +34,13 @@
             <a href="https://www.jerseymikes.com/">Jersey Mikes</a>
             <img src="images/jeresymikes.png" alt="Screenshot of the Jersey Mikes Homepage">
             <p>Jeresy Mike's homepage is a great example of Hick's Law. There are a few options which leave the customer less time to over think their order and less likley to go to another food provider.</p>
-            </div>
+        
         </section>
     </main>
     <footer>
         <p>
-            &copy;<span id="year"></span> | Sam Gordon | Utah | <p>This document was last modified <span id="modify"></span>.</p>
+            &copy;<span id="year"></span> | Sam Gordon | Utah | <p>This document was last modified <span id="modify"></span>.
         </p>
-        <p id="update">Last Updated:</p>
     </footer>
     <script src="scripts/script.js"></script>
 </body>
