--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,9 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&family=Roboto+Slab:wght@500&family=Work+Sans&display=swap" rel="stylesheet">
-    <title>Lesson 3: Typography</title>
 
-    <title>Chamber</title>
+    <title>MirrormontChamberofCommerce.com</title>
 </head>
 <body>
     <header>
