--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h2>WDD 230: Assignment Portal</h2>
         <ul>
             <li>Lesson 2: <a href="lesson2/design-principles.html">Lesson 2</a></li>
-            <li>Lesson 3: <a href="lesson3/index.html">Title</a></li>
-            <li>Lesson 4: <a href="#">Title</a></li>
+            <li>Lesson 3: <a href="lesson3/index.html">lesson 2</a></li>
+            <li>Lesson 4: <a href="chamber/index.html">Lesson 4</a></li>
             <li>Lesson 5: <a href="#">Title</a></li>
             <li>Lesson 6: <a href="#">Title</a></li>
             <li>Lesson 7: <a href="#">Title</a></li>
