--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&family=Roboto+Slab:wght@500&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <title>MirrormontChamberofCommerce.com</title>
 </head>
