--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>Lesson 2: <a href="lesson2/design-principles.html">Lesson 2</a></li>
             <li>Lesson 3: <a href="lesson3/index.html">lesson 3</a></li>
             <li>Lesson 4: <a href="chamber/index.html">Lesson 4</a></li>
-            <li>Lesson 5: <a href="#">Title</a></li>
+            <li>Lesson 5: <a href="lesson5/bom/bom.html">Book of Mormon: Top 25</a></li>
             <li>Lesson 6: <a href="#">Title</a></li>
             <li>Lesson 7: <a href="#">Title</a></li>
             <li>Lesson 8: <a href="#">Title</a></li>
