--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,8 +40,16 @@
     </header>
     <main>
         <div id="hero">
-            <h2>Hero</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ea vero sapiente minus laboriosam molestias est illo exercitationem perspiciatis quos quibusdam obcaecati possimus voluptatum repudiandae, eaque cum sunt quis.</p>
+            <h2>Mirrormont</h2>
+            <picture>
+                <img src="https://placekitten.com/800/300" alt="hero image">
+            </picture>
+            <section class="join-us">
+                <h3>Join Us!</h3>
+            </section>
+            <div class="meeting">
+                <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+            </div>
         </div>
         <div id="event">
             <h2>Events</h2>
