--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="images/mirrormont.png" alt="Logo">
+        <img id="logo" src="images/mirrormont.png" alt="Mirrormont Chamber of Commerce Logo">
         <h1>Mirrormont Chamber of Commerce</h1>
         <div>
             <img src="images/facebook.png" alt="Facebook"><a href="facebook.com"></a>
@@ -88,7 +88,7 @@
     </main>
     <footer>
         <!-- The footer contains the logo (a placeholder icon/image is fine for now), contact information, a link to a map, and a base footer with a dynamic copyright year (driven by JavaScript), site name, your name, "WDD 230 Project", and the last modification date driven by JavaScript. -->
-        <img id="logo" src="images/mirrormont.png" alt="Logo">
+        <img id="logo" src="images/mirrormont.png" alt="Mirrormont Chamber of Commerce Logo">
         <div>
             <p><a href="#">email@mirrormontchamber.com</a> | <a href="#">map</a> | &copy;<span id="year"> </span> | <a href="index.html">MirrormontChamberofCommerce.com</a> | Sam Gordon | WDD 230 Project | <span id="modify"></span></p>
         </div>
