--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Lesson 3: <a href="lesson3/index.html">lesson 3</a></li>
             <li>Lesson 4: <a href="chamber/index.html">Lesson 4</a></li>
             <li>Lesson 5: <a href="lesson5/bom/bom.html">Book of Mormon: Top 25</a></li>
-            <li>Lesson 6: <a href="chamber/index.html">Title</a></li>
+            <li>Lesson 6: <a href="chamber/index.html">Lesson 6</a></li>
             <li>Lesson 7: <a href="#">Title</a></li>
             <li>Lesson 8: <a href="#">Title</a></li>
             <li>Lesson 9: <a href="#">Title</a></li>
