--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <picture>
-            <img id="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo">
+            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo">
         </picture>
         
         <h1>Mirrormont Chamber of Commerce</h1>
@@ -44,7 +44,7 @@
         <div id="hero">
             <h2>Mirrormont</h2>
             <picture>
-                <img src="images/wdd230-org-1200.png" alt="hero image" sizes 2x srcset="images/wdd230-org-400.jpg 400w, images/wdd230-org-700.png 700w">
+                <img src="images/wdd230-org-1200.png" alt="hero image" srcset="images/wdd230-org-400.jpg 400w, images/wdd230-org-700.png 700w">
             </picture>
             <section class="join-us">
                 <h3>Join Us!</h3>
@@ -63,7 +63,7 @@
             <input class="temperature" value="">
             <span class="wind-speed">Wind Speed</span>
             <input class="wind-speed" value="">
-            <button id="submit"type="submit">Calculate</button>
+            <button id="submit" type="submit">Calculate</button>
             <span id='windChill'></span>
         </div>
         <div id="news" class="info">
@@ -95,7 +95,7 @@
     </main>
     <footer>
         <!-- The footer contains the logo (a placeholder icon/image is fine for now), contact information, a link to a map, and a base footer with a dynamic copyright year (driven by JavaScript), site name, your name, "WDD 230 Project", and the last modification date driven by JavaScript. -->
-        <img id="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo">
+        <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo">
         <div>
             <p><a href="#">email@mirrormontchamber.com</a> | <a href="#">map</a> | &copy;<span id="year"> </span> | <a href="index.html">MirrormontChamberofCommerce.com</a> | Sam Gordon | WDD 230 Project | <span id="modify"></span></p>
         </div>
