--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,8 +29,8 @@
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="#">Location</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Blog</a></li>   
