--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Lesson 4: <a href="chamber/index.html">Lesson 4</a></li>
             <li>Lesson 5: <a href="lesson5/bom/bom.html">Book of Mormon: Top 25</a></li>
             <li>Lesson 6: <a href="chamber/index.html">Lesson 6</a></li>
-            <li>Lesson 7: <a href="lesson7/lazyload.html">Lazy Loading</a></li>
+            <li>Lesson 7: <a href="lesson7/lazyload.html">Lazy Loading</a>, <a href=chamber/index.html>Week 7 chamber dicovery Page</a></li>
             <li>Lesson 8: <a href="#">Title</a></li>
             <li>Lesson 9: <a href="#">Title</a></li>
             <li>Lesson 10: <a href="#">Title</a></li>
