--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="#">Location</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Blog</a></li>   
             </ul>
