--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,13 +39,15 @@
         <!-- display current date with Javascript -->
         <span id="dateTime"></span>
     </header>
-    <main>
+    <main class="directory">
         
         <div>
-            <button>Grid</button>
-            <button>List</button>
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
         </div>
-        <div class="cards">Hello</div>
+        <section class="cards grid">
+            
+        </section>
 
     </main>
     <footer>
@@ -54,7 +56,7 @@
             <p><a href="#">email@mirrormontchamber.com</a> | <a href="#">map</a> | &copy;<span id="year"> </span> | <a href="index.html">MirrormontChamberofCommerce.com</a> | Sam Gordon | WDD 230 Project | <span id="modify"></span></p>
         </div>
     </footer>
-    <!-- <script src="scripts/scripts.js"></script> -->
+    <script src="scripts/scripts.js"></script>
     <script src="scripts/directory.js"></script>
 </body>
 </html>
