--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -21,7 +21,7 @@
             <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo">
         </picture>
         
-        <h1>Discover Page</h1>
+        <h1>Mirrormont Chamber of Commerce</h1>
         <div id="social">
             <img src="images/facebook.png" alt="Facebook"><a href="facebook.com"></a>
             <img src="images/linkedin.png" alt="LinkedIn"><a href="linkedin.com"></a>
@@ -31,8 +31,8 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="#">Location</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="join.html">Join</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="#">Blog</a></li>   
             </ul>
         </nav>
