--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
         <div id="hero">
             <h2>Mirrormont</h2>
             <picture>
-                <img src="images/wdd230-org-1200.png" alt="hero image" srcset="images/wdd230-org-400.jpg 400w, images/wdd230-org-700.png 700w">
+                <img src="images/mirrormont_sign980.jpg" alt="hero image" srcset="images/mirrormont_sign640.jpg 400w">
             </picture>
             <section class="join-us">
                 <h3>Join Us!</h3>
@@ -59,12 +59,15 @@
         </div>
         <div id="weather" class="info">
             <h2>Weather</h2>
-            <span class="temperature">Temperature</span>
-            <input class="temperature" value="">
-            <span class="wind-speed">Wind Speed</span>
-            <input class="wind-speed" value="">
-            <button id="submit" type="submit">Calculate</button>
-            <span id='windChill'></span>
+            <figure>
+                <img src="" alt="" id="weather-icon" />
+                <figcaption></figcaption>
+            </figure>
+            <p>Current Temperature: <span id="current-temp"></span> &deg;F</p>
+            <span ></span>
+            <p>Wind Speed: <span id="wind-speed"></span> MPH</p>
+            
+            <p>Wind Chill: <span id='windChill'> </span></p>
         </div>
         <div id="news" class="info">
             <h2>News</h2>
@@ -75,20 +78,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ea vero sapiente minus laboriosam molestias est illo exercitationem perspiciatis quos quibusdam obcaecati possimus voluptatum repudiandae, eaque cum sunt quis.</p>
         </div>
         <div id="spotlights" class="info">
-            <div id="spotlight1">
-                <h3>Spotlight</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ea vero sapiente minus laboriosam molestias est illo exercitationem perspiciatis quos quibusdam obcaecati possimus voluptatum repudiandae, eaque cum sunt quis.</p>
-            </div>
-            <div id="spotlight2">
-                <h3>Spotlight</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ea vero sapiente minus laboriosam molestias est illo exercitationem perspiciatis quos quibusdam obcaecati possimus voluptatum repudiandae, eaque cum sunt quis.</p>
-            </div>
-            <div id="spotlight3">
-                <h3>Spotlight</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat cupiditate ea vero sapiente minus laboriosam molestias est illo exercitationem perspiciatis quos quibusdam obcaecati possimus voluptatum repudiandae, eaque cum sunt quis.</p>
-            </div>
-
-            
+            <h3>Spotlight</h3>
+            <section class="spotlight"></section>
         </div>
 
 
@@ -101,6 +92,6 @@
         </div>
     </footer>
     <script src="scripts/scripts.js"></script>
-    <script src="scripts/windchill.js"></script>
+
 </body>
 </html>
