--- a/chamber/thanks-contact.html
+++ b/chamber/thanks-contact.html
@@ -41,9 +41,9 @@
     </header>
     <main id="thankyouPage">
         <div>
-            <h1 class="thanks">Mirrormont Chamber of Commerce Application</h1>
+            <h1 class="thanks">Mirrormont Chamber of Commerce</h1>
         </div>
-        <p>Thanks for applying to the Mirrormont Chamber of Commerce. We will proccess your application and get back to you.</p>
+        <p>Thanks for reaching out to the Mirrormont Chamber of Commerce. We will get back to you as soon as we can.</p>
     </main>
     <footer>
         <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo">
