--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Lesson 8: <a href="lesson-8/tablebuild.html">Lesson 8: Tablebuild</a>, <a href=chamber/index.html>Week 8 chamber Join Page</a></li>
             <li>Lesson 9: <a href="lesson-9/prophets.html">Prophets</a><a href="chamber/index.html">Directory</a></li>
             <li>Lesson 10: <a href="lesson-10/weather-api/weather-api.html">Lesson 10: Weather Api</a></li>
-            <li>Lesson 11: <a href="#">Title</a></li>
+            <li>Lesson 11: <a href="chamber/index.html">Final Chamber Site</a></li>
         </ul>
     </nav>
     <main>
