--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -18,14 +18,14 @@
 
 <body>
     <header>
-        <picture>
-            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo">
+        <picture><a href="index.html">
+            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo"></a>
         </picture>
 
         <h1>Mirrormont Chamber of Commerce</h1>
         <div id="social">
-            <img src="images/facebook.png" alt="Facebook"><a href="facebook.com"></a>
-            <img src="images/linkedin.png" alt="LinkedIn"><a href="linkedin.com"></a>
+            <img src="images/facebook.png" alt="Facebook"><a href="http://facebook.com"></a>
+            <img src="images/linkedin.png" alt="LinkedIn"><a href="http://linkedin.com"></a>
         </div>
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
