--- a/chamber/join.html
+++ b/chamber/join.html
@@ -17,9 +17,7 @@
 <body>
     <header>
         <picture>
-            <picture><a href="index.html">
-                <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo"></a>
-            </picture>
+            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo"><a href="index.html"></a>
         </picture>
         
         <h1>Mirrormont Chamber of Commerce</h1>
