--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,8 +21,8 @@
 
 <body>
     <header>
-        <picture><a href="index.html">
-            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo"></a>
+        <picture>
+            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo"><a href="index.html"></a>
         </picture>
 
         <h1>Mirrormont Chamber of Commerce</h1>
