--- a/chamber/thanks-contact.html
+++ b/chamber/thanks-contact.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <header>
-        <picture><a href="index.html">
-            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo"></a>
+        <picture>
+            <img class="logo" src="images/mirrormont.webp" alt="Mirrormont Chamber of Commerce Logo"><a href="index.html"></a>
         </picture>
         
         <h1>Mirrormont Chamber of Commerce</h1>
