--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li>Lesson 9: <a href="lesson-9/prophets.html">Prophets</a><a href="chamber/index.html">Directory</a></li>
             <li>Lesson 10: <a href="lesson-10/weather-api/weather-api.html">Lesson 10: Weather Api</a></li>
             <li>Lesson 11: <a href="chamber/index.html">Final Chamber Site</a></li>
+            <li>Final: <a href="final_project/index.html">Final</a></li>
         </ul>
     </nav>
     <main>
