--- a/final_project/index.html
+++ b/final_project/index.html
@@ -15,11 +15,16 @@
 <body>
     <header>
         <h1>Bountiful Fruits</h1>
+        <div id="social">
+            <img src="images/facebook.png" alt="Facebook"><a href="http://facebook.com"></a>
+            <img src="images/linkedin.png" alt="LinkedIn"><a href="http://linkedin.com"></a>
+        </div>
         <nav>
+            <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul>
-                <li>Home</li>
-                <li>Fresh</li>
-                <li>About Us</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="fresh.html">Fresh</a></li>
+                <li><a href="about-us.html">About Us</a></li>
             </ul>
         </nav>
     </header>
