--- a/final_project/index.html
+++ b/final_project/index.html
@@ -18,6 +18,8 @@
         <div id="social">
             <img src="images/facebook.png" alt="Facebook"><a href="http://facebook.com"></a>
             <img src="images/linkedin.png" alt="LinkedIn"><a href="http://linkedin.com"></a>
+            <img src="images/instagram.png" alt="Instagram"><a href="http://instagram.com"></a>
+            <img src="images/twitter.png" alt="twitter"><a href="http://twitter.com"></a>
         </div>
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
@@ -29,11 +31,22 @@
         </nav>
     </header>
     <main>
-
+        <div id="coast">
+            <p>Coast information</p>
+        </div>
+        <div>
+            <p>Fruit drink mix</p>
+        </div>
+        <div id="weather">
+            <span id="temperature">Temperature</span>
+            <span id="condition">Condition</span>
+            <span id="humidity">Humidity</span>
+            <span id="forcast">3 Day Forcast</span>
+        </div>
     </main>
     <footer>
         <div>
-            <p> &copy;<span id="year"> </span> | <a href="index.html">MirrormontChamberofCommerce.com</a> | Sam Gordo | WDD 230 Final Project | <span id="modify"></span></p>
+            <p> &copy;<span id="year"> </span> | <a href="index.html">boutintifulfoods.com</a> | Sam Gordo | WDD 230 Final Project | <span id="modify"></span></p>
         </div>
     </footer>
     <script src="scripts/scripts.js"></script>
