--- a/final_project/index.html
+++ b/final_project/index.html
@@ -32,7 +32,9 @@
     </header>
     <main>
         <div id="coast">
-            <p>Coast information</p>
+            <h2>Oceanside</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9442.456592065219!2d-117.38743664880592!3d33.20327928440737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc6fcab24c409f%3A0xa8b8dab8db9b636e!2sCalifornia+Welcome+Center%2C+Oceanside!5e0!3m2!1sen!2sus!4v1512607741934" width="600" height="300" frameborder="0" style="border: 0px; pointer-events: none;" allowfullscreen="" data-gtm-yt-inspected-9="true"></iframe>
+            <p>“Welcome to Oceanside!” is what you will hear as you enter our beautiful visitor center. The California Welcome Center in Oceanside receives more than 60,000 visitors each year and has a fantastic group of volunteers that are friendly and eager to provide helpful information and tips to you and your group when exploring Oceanside and the greater San Diego County. The Welcome Center is a great resource to visitors and locals alike, providing helpful information on top things to do in Oceanside and around the state.  Additionally, the visitor center sells discount attraction tickets, local gifts, and souvenirs. </p>
         </div>
         <div>
             <p>Fruit drink mix</p>
