--- a/final_project/index.html
+++ b/final_project/index.html
@@ -39,11 +39,17 @@
         <div>
             <p>Fruit drink mix</p>
         </div>
-        <div id="weather">
-            <span id="temperature">Temperature</span>
-            <span id="condition">Condition</span>
-            <span id="humidity">Humidity</span>
-            <span id="forcast">3 Day Forcast</span>
+        <div id="weather" class="info">
+            <h2>Weather</h2>
+            <figure>
+                <img src="" alt="" id="weather-icon" />
+                <figcaption></figcaption>
+            </figure>
+            <p>Current Temperature: <span id="current-temp"></span> &deg;F</p>
+            <span></span>
+            <p>Wind Speed: <span id="wind-speed"></span> MPH</p>
+
+            <p>Wind Chill: <span id='windChill'> </span></p>
         </div>
     </main>
     <footer>
