--- a/final_project/index.html
+++ b/final_project/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <h1>Bountiful Fruits</h1>
+        <span id="dateTime"></span>
         <div id="social">
             <img src="images/facebook.png" alt="Facebook"><a href="http://facebook.com"></a>
             <img src="images/linkedin.png" alt="LinkedIn"><a href="http://linkedin.com"></a>
