--- a/final_project/index.html
+++ b/final_project/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header>
+        
         <!-- 1. Readily available navigation and business contact information. -->
         <h1>Bountiful Fruits</h1>
         <span id="dateTime"></span>
@@ -44,10 +45,11 @@
             </picture>
             <p><strong>“Welcome to Oceanside!”</strong> is what you will hear as you enter our beautiful visitor center. The California Welcome Center in Oceanside receives more than 60,000 visitors each year and has a fantastic group of volunteers that are friendly and eager to provide helpful information and tips to you and your group when exploring Oceanside and the greater San Diego County. The Welcome Center is a great resource to visitors and locals alike, providing helpful information on top things to do in Oceanside and around the state.  Additionally, the visitor center sells discount attraction tickets, local gifts, and souvenirs. </p>
         </div>
+        <h2>Start your fruit drink mix here!</h2>
         <div>
             <!-- 3. A call to action to make your own fruit drink mix. This link can link to the Fresh page. -->
             <a href="fresh.html"> 
-            <h2>Start your fruit drink mix here!</h2>
+            
                 <picture>
                     <img data-src="images/pinapple-700.jpg" alt="California City" src="images/placeholder-300x400.png" srcset="images/pinapple-700.jpg 700w, images/pinapple-400.jpg 400w" id="pinapple">
                 </picture>
@@ -64,13 +66,13 @@
             <span></span>
             <p>Condition: <span id="condition"></span></p>
             <p>Humidity: <span id='humidity'> </span></p>
-            <p>Three Day Forcast: <span id="3-day-forcast"></span></p>
+            <p>Three Day Forcast: <span id="3-day-forcast">Can't pull 3 day forcast you have to pay for it(?)</span></p>
 
         </div>
         <div class="box" id="drinks">
             <!-- 6. Include an information card about the total number of specialty drinks that the current user has submitted from the Fresh page form. This information should just be stored locally, with the user's agent (browser). -->
             <h2>Drink Cart</h2>
-            <p>Drinks: <span id="drink-history"></span></p> 
+            <p>Fruit: <span id="drink-history"></span></p> 
         </div>
     </main>
     <footer>
