maybe last upload

--- a/final_project/about-us.html
+++ b/final_project/about-us.html
@@ -38,7 +38,7 @@
     </header>
     <main class="about-us">
         <h2>About Us!</h2>
-        <div class="about-us">
+        <div id="about-us">
             <picture>
                 <img data-src="images/beach-1280.jpg" alt="California City" src="images/placeholder-300x400.png" srcset="images/beach-700.jpg 700w, images/beach-400.jpg 400w" id="beach">
             </picture>
