--- a/final_project/about-us.html
+++ b/final_project/about-us.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon_io/favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Boutinful Fruits Homepage</title>
+    <title>Boutinful Fruits About Us Page</title>
 </head>
 <body>
     <header>
